--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -1,74 +1,65 @@
 ﻿@page "/install"
 @page "/install/{selectedStep}"
-@layout MinLayout
+@layout InstallLayout
 @inherits AppComponentBase
 
 
 <PageTitle>Install - Blazam</PageTitle>
-<Steps SelectedStep="@selectedStep" SelectedStepChanged="@OnSelectedStepChanged">
-    <Items>
-        <Step Completed=@(_step>1) Name="1">@SettingsLocalization["Database"]</Step>
-        <Step Completed=@(_step>2) Name="2">@SettingsLocalization["Authentication"]</Step>
-        <Step Completed=@(_step>3) Name="3">@SettingsLocalization["Directory"]</Step>
-        @*<Step Completed=@(_step>4) Name="4">@SettingsLocalization["Permissions"]</Step>*@
-        <Step Name="step4">
-            <Marker>
-                <MudIcon Icon="IconName.Flag" />
-            </Marker>
-            <Caption>
-                Finish
-            </Caption>
-        </Step>
-    </Items>
-    <Content>
-        <StepPanel Name="0">
 
-            <MudCard>
-                <MudCardHeader>
-                    Checking Installation
-                </MudCardHeader>
-                <MudCardBody>
-                    Please wait while the installation status of the application is checked...
-                </MudCardBody>
-            </MudCard>
+@if (completedSteps == 0)
+{
+    <MudCard>
+        <MudCardHeader>
+            Checking Installation
+        </MudCardHeader>
+        <MudCardContent>
+            Please wait while the installation status of the application is checked...
 
-        </StepPanel>
-        <StepPanel Name="1">
-            @if (_step > 0)
+        </MudCardContent>
+    </MudCard>
+}
+else
+{
+    <MudTabs Centered Elevation="1" ActivePanelIndex="@selectedStep" ActivePanelIndexChanged="@OnSelectedStepChanged">
+    <MudTabPanel Disabled=@(completedSteps<1) 
+        Icon="@(completedSteps>1?Icons.Material.Filled.CheckCircle:null)" 
+        ToolTip="Database" 
+        Text="1">
+            @if (completedSteps > 0)
             {
-                <InstallDatabase Completed=@(_step>1) StepCompleted="UpdateStatuses" />
+                <InstallDatabase Completed=@(completedSteps>1) StepCompleted="UpdateStatuses" />
             }
-        </StepPanel>
-        <StepPanel Name="2">
-            @if (_step > 1)
+        </MudTabPanel>
+        <MudTabPanel Disabled=@(completedSteps<2)
+            Text="2" 
+            ToolTip="Authentication" 
+            Icon="@(completedSteps>2?Icons.Material.Filled.CheckCircle:null)">
+            @if (completedSteps > 1)
             {
                 <Authentication StepCompleted="UpdateStatuses" />
             }
 
-        </StepPanel>
-
-        <StepPanel Name="3">
-            @if (_step > 2)
+        </MudTabPanel>
+        <MudTabPanel Disabled=@(completedSteps<3) 
+            Text="3"
+            ToolTip="Active Directory"
+            Icon="@(completedSteps>3?Icons.Material.Filled.CheckCircle:null)">
+            @if (completedSteps > 2)
             {
                 <ADirectory StepCompleted="UpdateStatuses" />
             }
-        </StepPanel>
-        @*
-        <StepPanel Name="4">
-
-        @if (_step > 3)
-        {
-        <Permissions StepCompleted="ShowLastStep" />
-        }
-
-        </StepPanel>
-        *@
-        <StepPanel Name="4">
+        </MudTabPanel>
+        <MudTabPanel Disabled=@(completedSteps<4) 
+            Icon="@Icons.Material.Filled.FlagCircle"
+            ToolTip="Finish">
             <h2>Installation Complete</h2>
             <MudButton @onclick="FinalizeInstall" Color="Color.Success">Finalize Install</MudButton>
-        </StepPanel>
-    </Content>
-</Steps>
+        </MudTabPanel>
+
+    </MudTabs>
+}
+
+
 
 
 
@@ -78,9 +69,18 @@
 
 
 @code {
-    int _step = 0;
+    int _completedSteps = 0;
+    int completedSteps
+    {
+        get => _completedSteps; set
+        {
+            _completedSteps = value;
+            selectedStep = value-1;
+
+        }
+    }
     [Parameter]
-    public string selectedStep { get; set; } = "0";
+    public int selectedStep { get; set; } = 0;
 
     protected override void OnInitialized()
     {
@@ -111,8 +111,7 @@
     async void UpdateStatuses()
     {
         Context = DbFactory.CreateDbContext();
-        _step = 1;
-        selectedStep = "1";
+        completedSteps = 1;
         if (Context != null)
         {
             if (Context.Status == ServiceConnectionState.Up)
@@ -120,8 +119,7 @@
 
                 if (!Context.Database.GetPendingMigrations().Any())
                 {
-                    _step = 2;
-                    selectedStep = "2";
+                    completedSteps = 2;
 
                     await InvokeAsync(StateHasChanged);
 
@@ -129,8 +127,7 @@
                     {
                         if (Context.AuthenticationSettings.FirstOrDefault() != null && Context.AuthenticationSettings.FirstOrDefault()?.AdminPassword != "password")
                         {
-                            _step = 3;
-                            selectedStep = "3";
+                            completedSteps = 3;
 
                             await InvokeAsync(StateHasChanged);
 
@@ -140,8 +137,7 @@
                             {
                                 if (Directory.Status == DirectoryConnectionStatus.OK)
                                 {
-                                    _step = 4;
-                                    selectedStep = "4";
+                                    completedSteps = 4;
 
                                     await InvokeAsync(StateHasChanged);
                                     //check permissions
@@ -180,16 +176,15 @@
         }
     }
 
-    private Task OnSelectedStepChanged(string name)
+    private Task OnSelectedStepChanged(int index)
     {
-        selectedStep = name;
+        selectedStep = index;
 
         return Task.CompletedTask;
     }
     private void ShowLastStep()
     {
-        selectedStep = "6";
-        _step = 6;
+        _completedSteps = 6;
         UpdateStatuses();
     }
     private void RecheckWritable()
