--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -13,38 +13,25 @@
 <h3>Audit</h3>
 
 
-<SetSubHeader>
-@*    <Tabs Background=Background.Light SelectedTab="@selectedTab" SelectedTabChanged="@OnSelectedTabChanged">
-        <Items>
-            <Tab Name="user">@SettingsLocalization["User"]</Tab>
-            <Tab Name="system">@SettingsLocalization["System"]</Tab>
-
-        </Items>
-    </Tabs>*@
-</SetSubHeader>
-
 
 <MudTabs ActivePanelIndex="@ActiveTab">
     <MudTabPanel>
         <ChildContent>
-            
+            <MudDataGrid Virtualize  ColumnResizeMode="ResizeMode.Container"   Hideable Items="@auditEntries.OrderByDescending(ae=>ae.Timestamp)" Filterable="false" SortMode="@SortMode.Multiple" Groupable="false">
+                <Columns>
+                    <PropertyColumn Property="x => x.Timestamp" />
+                    <PropertyColumn Property="x => x.Username" />
+                    <PropertyColumn Property="x => x.IpAddress"  />
+                    <PropertyColumn Property="x => x.Action" />
+                    <PropertyColumn Property="x => x.Target"/>
+                    <PropertyColumn Property="x => x.BeforeAction"/>
+                    <PropertyColumn Property="x => x.AfterAction"/>
+                   
+                </Columns>
+            </MudDataGrid>
 
 
-            <DataGrid TItem="CommonAuditLog"
-                      Data="@auditEntries.OrderByDescending(ae=>ae.Timestamp)"
-                        Responsive
-                        Virtualize>
-                <DataGridCommandColumn />
-                <DataGridColumn Field="@nameof(CommonAuditLog.Timestamp)" Caption="Timestamp" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.Username)" Caption="Username" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.IpAddress)" Caption="IP" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.Action)" Caption="Action" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.Target)" Caption="Target" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.BeforeAction)" Caption="Before" Filterable />
-                <DataGridColumn Field="@nameof(CommonAuditLog.AfterAction)" Caption="After" Filterable />
-
-            </DataGrid>
-
+         
 
         </ChildContent>
         <TabContent>
@@ -53,24 +40,20 @@
     </MudTabPanel>
     <MudTabPanel>
         <ChildContent>
+                <MudDataGrid Virtualize ColumnResizeMode="ResizeMode.Container" Hideable Items="@systemAuditEntries.OrderByDescending(ae=>ae.Timestamp)" Filterable="false" SortMode="@SortMode.Multiple" Groupable="false">
+                <Columns>
+                    <PropertyColumn Property="x => x.Timestamp" />
+                    <PropertyColumn Property="x => x.Username" />
+                    <PropertyColumn Property="x => x.IpAddress" />
+                    <PropertyColumn Property="x => x.Action" />
+                    <PropertyColumn Property="x => x.Target" />
+                    <PropertyColumn Property="x => x.BeforeAction" />
+                    <PropertyColumn Property="x => x.AfterAction" />
 
+                </Columns>
+                </MudDataGrid>
 
-            <DataGrid TItem="SystemAuditLog"
-                      Data="@systemAuditEntries.OrderByDescending(ae=>ae.Timestamp)"
-                        Responsive
-                        Virtualize>
-                <DataGridCommandColumn />
-                <DataGridColumn Field="@nameof(SystemAuditLog.Timestamp)" Caption="Timestamp" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.Username)" Caption="Username" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.IpAddress)" Caption="IP" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.Action)" Caption="Action" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.Target)" Caption="Target" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.BeforeAction)" Caption="Before" Filterable />
-                <DataGridColumn Field="@nameof(SystemAuditLog.AfterAction)" Caption="After" Filterable />
-
-            </DataGrid>
-
-
+           
 
         </ChildContent>
         <TabContent>
