Part 8  MudBlazor  Conversion

--- a/BLAZAM/Pages/Configure/Settings.razor
+++ b/BLAZAM/Pages/Configure/Settings.razor
@@ -6,6 +6,8 @@
 @inherits TabbedAppComponentBase
 
 <AppPageTitle>Settings</AppPageTitle>
+<SetHeader>
+</SetHeader>
 <AuthorizeView>
         <MudTabs ActivePanelIndex="@ActiveTab">
             <MudTabPanel>
